# chat_application

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  ChatRoom.cpp  ChatRoom.h  ChatRoom.ui  ChatRoomUi.h  RoomCommand.h  RoomInfo.h  RoomSelect.cpp  RoomSelect.h  RoomSelect.ui  RoomSelectUi.h  ServerConnect.cpp  ServerConnect.h  ServerConnect.ui  ServerConnectUi.h  SocketConnection.cpp  SocketConnection.h  main.cpp
client_tests/: CMakeLists.txt  TestQString.cpp  TestQString.h  TestSocketConnection.cpp  TestSocketConnection.h  main.cpp
server/: CMakeLists.txt  ChatRoom.cpp  ChatRoom.h  Headers.h  Listener.cpp  Listener.h  RoomCommand.h  RoomMessage.h  RoomsSingleton.cpp  RoomsSingleton.h  SocketConnection.cpp  SocketConnection.h  main.cpp
server_tests/: CMakeLists.txt  main.cpp
